# javelin

./: .gitignore  Cargo.toml  README.md
src/: hertz.rs  main.rs  pipeline.rs  playback.rs
src/app/: db.rs  mod.rs
src/audio/: mod.rs  stream.rs
src/audio/fft/: buffer.rs  executor.rs  mod.rs  processor.rs  resolution.rs
src/audio/pipeline/: capture.rs  config.rs  fft.rs  mod.rs  module.rs  pass.rs  reconfigurable.rs  transform.rs
src/audio/pipeline/stage/: history.rs  mod.rs  notes.rs  smooth.rs
src/controller/: mod.rs  win.rs
src/host/: action.rs  mod.rs
src/ui/terminal/: mod.rs  waveform.rs
