[package]
name = "rave"
version = "0.1.0"
edition = "2021"

[dependencies]
circular-buffer = "0.1.7"
cpal = "0.15.3"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["rayon"] }
hound = "3.5.1"
rfd = "0.14.1"
ringbuf = "0.4.4"
rustfft = "6.2.0"

[profile.release]
lto = true
codegen-units = 1
