[package]
name = "javelin"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "2.0.0"
com-policy-config = { path = "vendor/com-policy-config" }
cpal = "0.18.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
display-info = "0.5.9"
fern = "0.7.1"
float-ord = "0.3.2"
futures = "0.3.32"
itertools = "0.15.0"
log = "0.4.33"
ratatui = "0.30.2"
# eframe = "0.28.1"
# egui = { version = "0.28.1", features = ["rayon"] }
# hound = "3.5.1"
# rfd = "0.17.2"
ringbuf = "0.5.0"
rocket = { version = "0.5.1", optional = true }
rocket_dyn_templates = { version = "0.2.0", features = [
	"handlebars",
], optional = true }
rodio = "0.22.2"
rustfft = "6.4.1"
tokio = { version = "1.52.3", features = ["full"] }
windows = { version = "0.62.2", features = [
	"Media_Control",
	"Win32_Media_Audio_Endpoints",
] }

[features]
server = ["rocket", "rocket_dyn_templates"]

[profile.release]
lto = true
codegen-units = 1
debug = true
